small/cst/small/small_grammarParser.py
# Generated from small/small_grammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class small_grammarParser ( Parser ):

    grammarFileName = "small_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'function'", 
                     "'return'", "'{'", "'}'", "'('", "')'", "','", "';'", 
                     "'='", "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", 
                     "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'True'", 
                     "'False'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FUNCTION", "RETURN", 
                      "LBRACE", "RBRACE", "LPAR", "RPAR", "COMMA", "SEMICOLON", 
                      "ASSIGN", "AND", "OR", "ADD", "SUBSTRACT", "MULTIPLY", 
                      "DIVIDE", "GREATER", "GREATER_EQUAL", "LESS", "LESS_EQUAL", 
                      "EQUAL", "DIFFERENT", "TRUE", "FALSE", "NUM", "IDENTIFIER", 
                      "COMMENT", "NEWLINE", "WS" ]

    RULE_math_op = 0
    RULE_logic_op = 1
    RULE_nop = 2
    RULE_expr = 3
    RULE_arith_expr = 4
    RULE_bool_expr = 5
    RULE_bin_math_op = 6
    RULE_bin_logic_op = 7
    RULE_rel_op = 8
    RULE_noprnd = 9
    RULE_boprnd = 10
    RULE_expr_list = 11
    RULE_func_call = 12
    RULE_stmt = 13
    RULE_assign_stmt = 14
    RULE_if_stmt = 15
    RULE_while_stmt = 16
    RULE_return_stmt = 17
    RULE_stmt_list = 18
    RULE_sequence = 19
    RULE_program = 20
    RULE_function = 21
    RULE_param_list = 22
    RULE_param = 23

    ruleNames =  [ "math_op", "logic_op", "nop", "expr", "arith_expr", "bool_expr", 
                   "bin_math_op", "bin_logic_op", "rel_op", "noprnd", "boprnd", 
                   "expr_list", "func_call", "stmt", "assign_stmt", "if_stmt", 
                   "while_stmt", "return_stmt", "stmt_list", "sequence", 
                   "program", "function", "param_list", "param" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FUNCTION=4
    RETURN=5
    LBRACE=6
    RBRACE=7
    LPAR=8
    RPAR=9
    COMMA=10
    SEMICOLON=11
    ASSIGN=12
    AND=13
    OR=14
    ADD=15
    SUBSTRACT=16
    MULTIPLY=17
    DIVIDE=18
    GREATER=19
    GREATER_EQUAL=20
    LESS=21
    LESS_EQUAL=22
    EQUAL=23
    DIFFERENT=24
    TRUE=25
    FALSE=26
    NUM=27
    IDENTIFIER=28
    COMMENT=29
    NEWLINE=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Math_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(small_grammarParser.ADD, 0)

        def SUBSTRACT(self):
            return self.getToken(small_grammarParser.SUBSTRACT, 0)

        def MULTIPLY(self):
            return self.getToken(small_grammarParser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(small_grammarParser.DIVIDE, 0)

        def getRuleIndex(self):
            return small_grammarParser.RULE_math_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMath_op" ):
                return visitor.visitMath_op(self)
            else:
                return visitor.visitChildren(self)




    def math_op(self):

        localctx = small_grammarParser.Math_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_math_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LESS(self):
            return self.getToken(small_grammarParser.LESS, 0)

        def GREATER(self):
            return self.getToken(small_grammarParser.GREATER, 0)

        def EQUAL(self):
            return self.getToken(small_grammarParser.EQUAL, 0)

        def DIFFERENT(self):
            return self.getToken(small_grammarParser.DIFFERENT, 0)

        def GREATER_EQUAL(self):
            return self.getToken(small_grammarParser.GREATER_EQUAL, 0)

        def LESS_EQUAL(self):
            return self.getToken(small_grammarParser.LESS_EQUAL, 0)

        def getRuleIndex(self):
            return small_grammarParser.RULE_logic_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_op" ):
                return visitor.visitLogic_op(self)
            else:
                return visitor.visitChildren(self)




    def logic_op(self):

        localctx = small_grammarParser.Logic_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_logic_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 33030144) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(small_grammarParser.EQUAL, 0)

        def DIFFERENT(self):
            return self.getToken(small_grammarParser.DIFFERENT, 0)

        def AND(self):
            return self.getToken(small_grammarParser.AND, 0)

        def OR(self):
            return self.getToken(small_grammarParser.OR, 0)

        def getRuleIndex(self):
            return small_grammarParser.RULE_nop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNop" ):
                return visitor.visitNop(self)
            else:
                return visitor.visitChildren(self)




    def nop(self):

        localctx = small_grammarParser.NopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 25190400) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arith_expr(self):
            return self.getTypedRuleContext(small_grammarParser.Arith_exprContext,0)


        def bool_expr(self):
            return self.getTypedRuleContext(small_grammarParser.Bool_exprContext,0)


        def getRuleIndex(self):
            return small_grammarParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = small_grammarParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.arith_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.bool_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arith_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def noprnd(self):
            return self.getTypedRuleContext(small_grammarParser.NoprndContext,0)


        def bin_math_op(self):
            return self.getTypedRuleContext(small_grammarParser.Bin_math_opContext,0)


        def getRuleIndex(self):
            return small_grammarParser.RULE_arith_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArith_expr" ):
                return visitor.visitArith_expr(self)
            else:
                return visitor.visitChildren(self)




    def arith_expr(self):

        localctx = small_grammarParser.Arith_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arith_expr)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.noprnd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.bin_math_op()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boprnd(self):
            return self.getTypedRuleContext(small_grammarParser.BoprndContext,0)


        def rel_op(self):
            return self.getTypedRuleContext(small_grammarParser.Rel_opContext,0)


        def bin_logic_op(self):
            return self.getTypedRuleContext(small_grammarParser.Bin_logic_opContext,0)


        def getRuleIndex(self):
            return small_grammarParser.RULE_bool_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool_expr" ):
                return visitor.visitBool_expr(self)
            else:
                return visitor.visitChildren(self)




    def bool_expr(self):

        localctx = small_grammarParser.Bool_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bool_expr)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.boprnd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.rel_op()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.bin_logic_op()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_math_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # NoprndContext
            self.right = None # NoprndContext

        def math_op(self):
            return self.getTypedRuleContext(small_grammarParser.Math_opContext,0)


        def noprnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(small_grammarParser.NoprndContext)
            else:
                return self.getTypedRuleContext(small_grammarParser.NoprndContext,i)


        def getRuleIndex(self):
            return small_grammarParser.RULE_bin_math_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_math_op" ):
                return visitor.visitBin_math_op(self)
            else:
                return visitor.visitChildren(self)




    def bin_math_op(self):

        localctx = small_grammarParser.Bin_math_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bin_math_op)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            localctx.left = self.noprnd()
            self.state = 68
            self.math_op()
            self.state = 69
            localctx.right = self.noprnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_logic_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # NoprndContext
            self.right = None # NoprndContext

        def logic_op(self):
            return self.getTypedRuleContext(small_grammarParser.Logic_opContext,0)


        def noprnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(small_grammarParser.NoprndContext)
            else:
                return self.getTypedRuleContext(small_grammarParser.NoprndContext,i)


        def getRuleIndex(self):
            return small_grammarParser.RULE_bin_logic_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin_logic_op" ):
                return visitor.visitBin_logic_op(self)
            else:
                return visitor.visitChildren(self)




    def bin_logic_op(self):

        localctx = small_grammarParser.Bin_logic_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bin_logic_op)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            localctx.left = self.noprnd()
            self.state = 72
            self.logic_op()
            self.state = 73
            localctx.right = self.noprnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rel_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # BoprndContext
            self.right = None # BoprndContext

        def nop(self):
            return self.getTypedRuleContext(small_grammarParser.NopContext,0)


        def boprnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(small_grammarParser.BoprndContext)
            else:
                return self.getTypedRuleContext(small_grammarParser.BoprndContext,i)


        def getRuleIndex(self):
            return small_grammarParser.RULE_rel_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRel_op" ):
                return visitor.visitRel_op(self)
            else:
                return visitor.visitChildren(self)




    def rel_op(self):

        localctx = small_grammarParser.Rel_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rel_op)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            localctx.left = self.boprnd()
            self.state = 76
            self.nop()
            self.state = 77
            localctx.right = self.boprnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NoprndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(small_grammarParser.IDENTIFIER, 0)

        def NUM(self):
            return self.getToken(small_grammarParser.NUM, 0)

        def getRuleIndex(self):
            return small_grammarParser.RULE_noprnd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNoprnd" ):
                return visitor.visitNoprnd(self)
            else:
                return visitor.visitChildren(self)




    def noprnd(self):

        localctx = small_grammarParser.NoprndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_noprnd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not(_la==27 or _la==28):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoprndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(small_grammarParser.IDENTIFIER, 0)

        def TRUE(self):
            return self.getToken(small_grammarParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(small_grammarParser.FALSE, 0)

        def getRuleIndex(self):
            return small_grammarParser.RULE_boprnd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoprnd" ):
                return visitor.visitBoprnd(self)
            else:
                return visitor.visitChildren(self)




    def boprnd(self):

        localctx = small_grammarParser.BoprndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_boprnd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 369098752) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(small_grammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(small_grammarParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(small_grammarParser.COMMA)
            else:
                return self.getToken(small_grammarParser.COMMA, i)

        def getRuleIndex(self):
            return small_grammarParser.RULE_expr_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_list" ):
                return visitor.visitExpr_list(self)
            else:
                return visitor.visitChildren(self)




    def expr_list(self):

        localctx = small_grammarParser.Expr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.expr()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 84
                self.match(small_grammarParser.COMMA)
                self.state = 85
                self.expr()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(small_grammarParser.IDENTIFIER, 0)

        def LPAR(self):
            return self.getToken(small_grammarParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(small_grammarParser.RPAR, 0)

        def expr_list(self):
            return self.getTypedRuleContext(small_grammarParser.Expr_listContext,0)


        def getRuleIndex(self):
            return small_grammarParser.RULE_func_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_call" ):
                return visitor.visitFunc_call(self)
            else:
                return visitor.visitChildren(self)




    def func_call(self):

        localctx = small_grammarParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(small_grammarParser.IDENTIFIER)
            self.state = 92
            self.match(small_grammarParser.LPAR)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 503316480) != 0):
                self.state = 93
                self.expr_list()


            self.state = 96
            self.match(small_grammarParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(small_grammarParser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(small_grammarParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(small_grammarParser.While_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(small_grammarParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return small_grammarParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = small_grammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stmt)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.assign_stmt()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.if_stmt()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.while_stmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.return_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(small_grammarParser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(small_grammarParser.EQUAL, 0)

        def SEMICOLON(self):
            return self.getToken(small_grammarParser.SEMICOLON, 0)

        def expr(self):
            return self.getTypedRuleContext(small_grammarParser.ExprContext,0)


        def func_call(self):
            return self.getTypedRuleContext(small_grammarParser.Func_callContext,0)


        def getRuleIndex(self):
            return small_grammarParser.RULE_assign_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = small_grammarParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(small_grammarParser.IDENTIFIER)
            self.state = 105
            self.match(small_grammarParser.EQUAL)
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 106
                self.expr()
                pass

            elif la_ == 2:
                self.state = 107
                self.func_call()
                pass


            self.state = 110
            self.match(small_grammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.if_body = None # SequenceContext
            self.else_body = None # SequenceContext

        def IF(self):
            return self.getToken(small_grammarParser.IF, 0)

        def LPAR(self):
            return self.getToken(small_grammarParser.LPAR, 0)

        def bool_expr(self):
            return self.getTypedRuleContext(small_grammarParser.Bool_exprContext,0)


        def RPAR(self):
            return self.getToken(small_grammarParser.RPAR, 0)

        def ELSE(self):
            return self.getToken(small_grammarParser.ELSE, 0)

        def sequence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(small_grammarParser.SequenceContext)
            else:
                return self.getTypedRuleContext(small_grammarParser.SequenceContext,i)


        def getRuleIndex(self):
            return small_grammarParser.RULE_if_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = small_grammarParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(small_grammarParser.IF)
            self.state = 113
            self.match(small_grammarParser.LPAR)
            self.state = 114
            self.bool_expr()
            self.state = 115
            self.match(small_grammarParser.RPAR)
            self.state = 116
            localctx.if_body = self.sequence()
            self.state = 117
            self.match(small_grammarParser.ELSE)
            self.state = 118
            localctx.else_body = self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.while_body = None # SequenceContext

        def WHILE(self):
            return self.getToken(small_grammarParser.WHILE, 0)

        def LPAR(self):
            return self.getToken(small_grammarParser.LPAR, 0)

        def bool_expr(self):
            return self.getTypedRuleContext(small_grammarParser.Bool_exprContext,0)


        def RPAR(self):
            return self.getToken(small_grammarParser.RPAR, 0)

        def sequence(self):
            return self.getTypedRuleContext(small_grammarParser.SequenceContext,0)


        def getRuleIndex(self):
            return small_grammarParser.RULE_while_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = small_grammarParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(small_grammarParser.WHILE)
            self.state = 121
            self.match(small_grammarParser.LPAR)
            self.state = 122
            self.bool_expr()
            self.state = 123
            self.match(small_grammarParser.RPAR)
            self.state = 124
            localctx.while_body = self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(small_grammarParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(small_grammarParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(small_grammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return small_grammarParser.RULE_return_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = small_grammarParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(small_grammarParser.RETURN)
            self.state = 127
            self.expr()
            self.state = 128
            self.match(small_grammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
